--- a/package.json
+++ b/package.json
@@ -22,17 +22,22 @@
   },
   "homepage": "https://github.com/jlopezxs/metalsmith-blog-platform#readme",
   "devDependencies": {
+    "handlebars": "^4.0.5",
+    "handlebars-helper": "0.0.12",
+    "handlebars-layouts": "^3.1.3",
     "jade": "^1.11.0",
     "metalsmith": "^2.1.0",
     "metalsmith-collections": "^0.7.0",
+    "metalsmith-drafts": "0.0.1",
     "metalsmith-html-minifier": "^1.1.0",
     "metalsmith-in-place": "^1.3.2",
     "metalsmith-layouts": "^1.4.2",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.4.1",
+    "metalsmith-register-helpers": "^0.1.2",
     "metalsmith-sass": "^1.3.0",
     "metalsmith-serve": "0.0.6",
     "metalsmith-watch": "^1.0.1",
-    "moment": "^2.10.6",
+    "moment": "^2.10.6"
   }
 }
